code: applying Functional Programming ==> Walking A Directory With Walk(Title). adding main method